# GoIT-PyWeb7

./: LICENSE  README.md  try.json
hw12/: README.md  __init__.py  alembic.ini  app.py  pyproject.toml  test.py
hw12/config/: app_cfg.yaml
hw12/migrations/: env.py
hw12/migrations/versions/: 03e3a2006a2b_init.py  313cb0ea2ff9_monobank_storage.py  594d3eff20a6_init.py  af5d4b285746_monobank_rates_to_float.py  e72360df3fd6_monobank_rates_to_float.py
hw12/src/: __init__.py  routes.py  settings.py  views.py
hw12/src/libs/: codes_to_db.py  constants.py  mono_parser.py  pb24_parser.py
hw12/src/libs/data/: codes.csv
hw12/src/repository/: currency.py  mono.py
hw12/src/storage/: models.py
hw12/templates/: base.html
hw12/templates/pages/: _form.html  _mono.html  _pb.html  checker.html  index.html
hw13/: README.md  pyproject.toml
hw13/finance_helper/finance_helper/: asgi.py  context_processor.py  settings.py  urls.py  wsgi.py
hw13/finance_helper/finances/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
hw13/finance_helper/finances/libs/: constants.py  correlate_pagination.py  ordering.py  search_parser.py
hw13/finance_helper/finances/migrations/: 0001_initial.py  0002_transaction_alter_category_options_and_more.py  0003_remove_transaction_balance_account.py  0004_alter_account_options.py  0005_account_name_remove_account_transaction_and_more.py  0006_alter_account_options_remove_account_transaction_and_more.py  0007_alter_account_balance.py  0008_account_slug_alter_transaction_slug.py  0009_alter_account_balance.py  0010_transaction_balance_alter_account_slug.py  0011_alter_transaction_date.py  0012_alter_transaction_date.py  0013_alter_transaction_options_alter_transaction_balance_and_more.py  0014_alter_transaction_balance_alter_transaction_date.py  0015_alter_transaction_balance_alter_transaction_date.py  0016_alter_transaction_account_alter_transaction_date.py  0017_alter_transaction_date.py  0018_alter_transaction_date.py  (+1 more)
hw13/finance_helper/users/: forms.py  urls.py  views.py
hw15/: README.md  main.py  pyproject.toml
hw15/api/: app.py  dependecies.py  main.py
hw15/api/config/: config.py  config.yaml
hw15/api/database/: base.py  base_class.py  connection.py
hw15/api/db/: database.py
hw15/api/libs/: constants.py  hash.py  oath2.py
hw15/api/models/: articles.py  users.py
hw15/api/repositories/: articles.py  users.py
hw15/api/routers/: articles.py  auth.py  currencies.py
hw15/api/schemas/: articles.py  auth.py  currencies.py  recipes.py
hw15/api/tests/: conftest.py  test_articles.py
hw15/migrations/: env.py
hw15/migrations/versions/: 0beeafb33e64_users_username_unique.py  c95c7f6a9b9e_articles_init.py  eebf40845f31_articles_article_owner_added.py
hw15_16/: README.md  pyproject.toml
hw15_16/api/: app.py  dependecies.py
hw15_16/api/config/: config.py
hw15_16/api/database/: base.py
hw15_16/api/libs/: hash.py  oath2.py
hw15_16/api/models/: articles.py  users.py
hw15_16/api/repositories/: articles.py  users.py
hw15_16/api/routers/: articles.py  auth.py  users.py
hw15_16/api/schemas/: articles.py  currencies.py  users.py
hw15_16/api/tests/: conftest.py  test_articles.py  test_auth.py  test_users.py
hw15_16/migrations/: env.py
hw15_16/migrations/versions/: 044fb34594ca_users_init.py  0beeafb33e64_users_username_unique.py  342360db8150_articles_article_owner_added.py  c95c7f6a9b9e_articles_init.py  cf7c4eb0a1d2_articles_init.py  eebf40845f31_articles_article_owner_added.py  f3168759f1d3_users_init.py
(+147 files in other folders)
