[tool.poetry]
name = "aiohttp-scrapper"
version = "0.1.0"
description = "GoIT-PyWeb7 hw12"
authors = ["Vaipik <n.khylko@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aiohttp_scrapper"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
sqlalchemy = "^1.4.45"
alembic = "^1.8.1"
aiohttp-jinja2 = "^1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
